Java8-SangND: update list.